<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onMyTestClick"
        android:text="@string/buttonText"
        android:textSize="15sp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/editTextTextPassword"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="352dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="50dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="436dp"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:padding="15dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="50dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="489dp"
        android:layout_height="365dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008"
        app:srcCompat="@mipmap/logo_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>